pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: barolina/hello
    ports:
      - containerPort: 80
