app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-proxy.default.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth-proxy.default.svc.cluster.local:9000/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId,X-First-Name,X-Last-Name"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /users/me
