auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /login
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /signin
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /logout
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /register
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /auth
      - backend:
          serviceName: larisa-hello-chart
          servicePort: 9000
        path: /update_profile
